# sims2

./: .gitmodules  CMakeLists.txt
include/sims2/: bitmap.h  constants.h  datagen.h  linalg.h  link.h  linkmodel.h  losmodel.h  radiomodel.h
libs/: CMakeLists.txt
linkmodel_verification/: CMakeLists.txt  lmv.cpp
src/: bitmap.cpp  datagen.cpp  linkmodel.cpp  losmodel.cpp  radiomodel.cpp
test/: CMakeLists.txt  gen_map  test.cpp
